# usbview-qt

./: CMakeLists.txt  Device.cpp  Device.h  DeviceTree.cpp  DeviceTree.h  DeviceTreeWidget.cpp  DeviceTreeWidget.h  ExtDescription.cpp  ExtDescription.h  HIDReportDescriptor.cpp  HIDReportDescriptor.h  MainWindow.cpp  MainWindow.h  PropertiesWidget.cpp  PropertiesWidget.h  common.hpp  main.cpp  usbids.cpp  usbids.h  util.hpp
